# radiatedPowerPackages

./: CMakeLists.txt
ElectronDynamics/: BorisSolver.h  CMakeLists.txt  MyCustomBorisSolver.cxx  MyCustomBorisSolver.h  QTNMApproxFields.cxx  QTNMApproxFields.h
SingleElectronRadiation/: CMakeLists.txt  SingleElectronRadiation.cxx  SingleElectronRadiation.h
executables/: BorisSolverSolve.cxx  BorisSolverSolve.h  CMakeLists.txt  SingleElectronSolve.cxx  TestBackgroundElectrons.cxx
